# ai-robot

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  robot_udp_driver.py
components/battery_monitor/: CMakeLists.txt  battery_monitor.c  battery_monitor.h
components/led_control/: CMakeLists.txt  led_control.c  led_control.h
components/motor_control/: CMakeLists.txt  Kconfig.projbuild  motor_control.c  motor_control.h
components/nanopb/: CMakeLists.txt
components/readline/: CMakeLists.txt  readline.c
components/udpcomm/: CMakeLists.txt  Kconfig.projbuild  udpserver.c  udpserver.h
components/udpcomm/proto/: RobotSystemCommunication.pb.c  RobotSystemCommunication.pb.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wificonnect.c  wificonnect.h  wifiscan.c  wifiscan.h
main/: CMakeLists.txt  Kconfig.projbuild  RobotSystemCommunication.pb.c  RobotSystemCommunication.pb.h  console.c  console.h  main.c  readline.h  udpserver.c  udpserver.h  wifi.c  wifi.h  wificonnect.c  wifiscan.c
proto/: RobotSystemCommunication_pb2.py  RobotSystemCommunication_pb2_grpc.py
